--- a/Net/dhcpcd/build
+++ b/Net/dhcpcd/build
@@ -3,13 +3,14 @@
 PRETTY_NAME=dhcpcd
 MAJOR=10
 MINOR=2
-PATCH=2
-VERSION=10.2.2
+PATCH=4
+VERSION=10.2.4
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/NetworkConfiguration/dhcpcd/archive/refs/tags/v.tar.gz
+curl --location --remote-name --skip-existing https://github.com/NetworkConfiguration/dhcpcd/archive/refs/tags/v$VERSION.tar.gz
+
 gzip -cd v$VERSION.tar.gz | tar -x
 cd dhcpcd-$VERSION
 
