--- a/System/tzdata/build
+++ b/System/tzdata/build
@@ -2,14 +2,15 @@
 
 PRETTY_NAME=tzdata
 MAJOR=2025
-MINOR=a
+MINOR=b
 PATCH=
-VERSION=2025a
+VERSION=2025b
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/eggert/tz/archive/refs/tags/.tar.gz
+curl --location --remote-name --skip-existing https://github.com/eggert/tz/archive/refs/tags/$VERSION.tar.gz
+
 gzip -cd $VERSION.tar.gz | tar -x
 cd tz-$VERSION
 
