--- a/Fs/e2fsprogs/build
+++ b/Fs/e2fsprogs/build
@@ -3,13 +3,13 @@
 PRETTY_NAME=e2fsprogs
 MAJOR=1
 MINOR=47
-PATCH=1
-VERSION=1.47.1
+PATCH=3
+VERSION=1.47.3
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v/e2fsprogs-$VERSION.tar.xz
+curl --location --remote-name --skip-existing https://kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v$VERSION/e2fsprogs-$VERSION.tar.xz
 
 xz -cd e2fsprogs-$VERSION.tar.xz | tar -x
 cd e2fsprogs-$VERSION
@@ -23,7 +23,6 @@ cd e2fsprogs-$VERSION
 	--disable-libblkid \
 	--disable-nls \
 	--disable-uuidd \
-	--disable-fsck \
 	--disable-elf-shlibs \
 	--disable-tls \
 	--disable-lto \
