--- a/System/expat/build
+++ b/System/expat/build
@@ -2,15 +2,16 @@
 
 PRETTY_NAME=expat
 MAJOR=2
-MINOR=6
-PATCH=2
-VERSION=2.6.2
+MINOR=7
+PATCH=3
+VERSION=2.7.3
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/libexpat/libexpat/releases/download/R_/expat-.tar.bz2
-bzip2 -cd expat-$VERSION.tar.bz2 | tar -x
+curl --location --remote-name --skip-existing https://github.com/libexpat/libexpat/releases/download/R\_$MAJOR\_$MINOR\_$PATCH/expat-$VERSION.tar.xz
+
+xz -cd expat-$VERSION.tar.xz | tar -x
 cd expat-$VERSION
 
 ./configure \
