Integrate a Gentoo patch to have wpa_supplicant working with latest libressl

--- a/Net/wpa_supplicant/build
+++ b/Net/wpa_supplicant/build
@@ -10,9 +10,15 @@ mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://w1.fi/releases/wpa_supplicant-$VERSION.tar.gz
+curl --location --remote-name --skip-existing https://raw.githubusercontent.com/gentoo/libressl/refs/heads/master/net-wireless/wpa_supplicant/files/wpa_supplicant-2.11-libressl.patch
 
 gzip -cd wpa_supplicant-$VERSION.tar.gz | tar -x
-cd wpa_supplicant-$VERSION/wpa_supplicant
+cd wpa_supplicant-$VERSION
+
+# ABI breakage
+patch -p1 < ../wpa_supplicant-2.11-libressl.patch
+
+cd wpa_supplicant
 
 cp defconfig .config
 sed -i 's|CONFIG_CTRL_IFACE_DBUS_NEW=y|#CONFIG_CTRL_IFACE_DBUS_NEW=n|g' .config
@@ -22,7 +28,7 @@ sed -i "s|#LIBS += -L$<path to libnl library files>|LIBS += $(pkgconf --libs lib
 
 sed -i 's|LIBDIR ?= /usr/local/lib|LIBDIR = /usr/lib|g' Makefile
 sed -i 's|INCDIR ?= /usr/local/include|INCDIR = /usr/include|g' Makefile
-sed -i 's|BINDIR ?= /usr/local/bin|BINDIR = /usr/bin|g' Makefile
+sed -i 's|BINDIR ?= /usr/local/sbin|BINDIR = /usr/bin|g' Makefile
 
 make
 make DESTDIR=$DESTDIR install
@@ -34,7 +40,7 @@ mkdir -p $DESTDIR/usr/share/man/man8
 cp -f doc/docbook/*.5 $DESTDIR/usr/share/man/man5
 cp -f doc/docbook/*.8 $DESTDIR/usr/share/man/man8
 
-install -Dm755 ../wpa_supplicant.run "$DESTDIR/etc/sv/wpa_supplicant/run"
+install -Dm755 ../../wpa_supplicant.run "$DESTDIR/etc/sv/wpa_supplicant/run"
 ln -sf /run/runit/supervise.wpa_supplicant "$DESTDIR/etc/sv/wpa_supplicant/supervise"
 
 doas chown -R root:root $DESTDIR
