--- a/Lang/python/build
+++ b/Lang/python/build
@@ -2,69 +2,54 @@
 
 PRETTY_NAME=python
 MAJOR=3
-MINOR=12
-PATCH=2
-VERSION=3.12.2
+MINOR=14
+PATCH=0
+VERSION=3.14.0
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://www.python.org/ftp/python//Python-$VERSION.tar.xz
+curl --location --remote-name --skip-existing https://www.python.org/ftp/python/$VERSION/Python-$VERSION.tar.xz
+curl --location --remote-name --skip-existing https://raw.githubusercontent.com/gentoo/libressl/refs/heads/master/dev-lang/python/files/python-3.14.0-libressl.patch
 
 tar -xf Python-$VERSION.tar.xz
 cd Python-$VERSION
 
-export CFLAGS="$CFLAGS -DTHREAD_STACK_SIZE=0x100000 -fno-semantic-interposition"
-export LDFLAGS="$LDFLAGS -fno-semantic-interposition"
+patch -p1 < ../python-3.14.0-libressl.patch
 
-cat > Modules/Setup.local << EOF
+cat >> Modules/Setup << EOF
 *disabled*
-_tkinker
-_dbm
-_gdbm
 nis
 ossaudiodev
+_gdbm _dbm
+_tkinter
 EOF
 
 ./configure \
+	ac_cv_working_openssl_hashlib=yes \
 	--prefix=/usr \
 	--enable-shared \
 	--enable-loadable-sqlite-extensions \
 	--with-readline=editline \
 	--with-tzpath=/usr/share/zoneinfo \
 	--with-system-expat \
-	--without-ensurepip \
+	--with-system-libmpdec \
 	--disable-test-modules \
+	--without-ensurepip \
 	--without-doc-strings
 
 make
-make install
+make DESTDIR=$DESTDIR install
 
 ln -sf python3         "$DESTDIR/usr/bin/python"
 ln -sf python3-config  "$DESTDIR/usr/bin/python-config"
 
-# Even when disabled, it's created anyway :(
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/tkinter"
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/idlelib"
-rm -f  "$DESTDIR/usr/bin/idle$MAJOR"
-rm -f  "$DESTDIR/usr/bin/idle$MAJOR.$MINOR"
-
-# That's... there
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/turtledemo"
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/turtle.py"
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/__pycache__/turtle.*"
-
-# I don't really use pydoc that much
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/pydoc_data"
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/pydoc.py"
-rm -f  "$DESTDIR/usr/bin/pydoc$MAJOR"
-rm -f  "$DESTDIR/usr/bin/pydoc$MAJOR.$MINOR"
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/__pycache__/pydoc.*"
-
-# Python2 has been EOL since ages!
-rm -rf "$DESTDIR/usr/lib/python$MAJOR.$MINOR/lib2to3"
-rm -f  "$DESTDIR/usr/bin/2to3"
-rm -f  "$DESTDIR/usr/bin/2to3-$MAJOR.$MINOR"
+find "$DESTDIR/usr/lib/python$MAJOR.$MINOR/__pycache__" -name 'turtle*.pyc' -delete
+rm $DESTDIR/usr/bin/idle*
+rm -rf $DESTDIR/usr/lib/python$MAJOR.$MINOR/idlelib
+rm -rf $DESTDIR/usr/lib/python$MAJOR.$MINOR/turtle.py
+rm -rf $DESTDIR/usr/lib/python$MAJOR.$MINOR/turtledemo
+rm -rf $DESTDIR/usr/lib/python$MAJOR.$MINOR/tkinter
 
 strip --strip-unneeded "$DESTDIR/usr/bin/python3"
 find "$DESTDIR/usr/lib" -name '*.a'   -type f -exec strip --strip-unneeded {} \;
