--- a/Lang/gcc/build
+++ b/Lang/gcc/build
@@ -1,17 +1,17 @@
 #!/bin/sh -e
 
 PRETTY_NAME=gcc
-MAJOR=14
+MAJOR=15
 MINOR=2
 PATCH=0
-VERSION=14.2.0
+VERSION=15.2.0
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://gcc.gnu.org/pub/gcc/releases/gcc-/gcc-$VERSION.tar.xz
+curl --location --remote-name --skip-existing https://gcc.gnu.org/pub/gcc/releases/gcc-$VERSION/gcc-$VERSION.tar.xz
 
-tar -xf gcc-$VERSION.tar.xz
+xz -cd gcc-$VERSION.tar.xz | tar -x
 mkdir -p "gcc-$VERSION/builderoni"
 cd "gcc-$VERSION/builderoni"
 
@@ -67,4 +67,4 @@ then
 fi
 
 doas chown -R root:root $DESTDIR
-doas sh -c "tar -zcC $DESTDIR . | gzip > ../gcc@$VERSION.tar.gz"
+doas sh -c "tar -zcC $DESTDIR . | gzip > ../../gcc@$VERSION.tar.gz"
