--- a/Media/libpng/build
+++ b/Media/libpng/build
@@ -10,9 +10,14 @@ mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://www.github.com/pnggroup/libpng/archive/refs/tags/v$VERSION.tar.gz
+curl --location --remote-name --skip-existing https://downloads.sourceforge.net/sourceforge/libpng-apng/libpng-$VERSION-apng.patch.gz
 
 gzip -cd v$VERSION.tar.gz | tar -x
 cd libpng-$VERSION
+
+# LFS suggests adding support for animated PNGs, needed for building firefox
+
+gzip -cd ../libpng-$VERSION-apng.patch.gz | patch -p1
 
 # Proper architecture-dependent optimizations are detected automatically
 ./configure \
@@ -25,7 +30,7 @@ cd libpng-$VERSION
 make
 make DESTDIR=$DESTDIR install-strip
 
-find $DESTDIR -type f -name '*.la' -delete
+find $DESTDIR -type fl -name '*.la' -delete
 
 doas chown -R root:root $DESTDIR
 doas sh -c "tar -zcC $DESTDIR . | gzip > ../libpng@$VERSION.tar.gz"
