--- a/System/libudev-zero/build
+++ b/System/libudev-zero/build
@@ -9,7 +9,8 @@ VERSION=1.0.3
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/illiliti/libudev-zero/archive/.tar.gz
+curl --location --remote-name --skip-existing https://github.com/illiliti/libudev-zero/archive/$VERSION.tar.gz
+
 gzip -cd $VERSION.tar.gz | tar -x
 cd libudev-zero-$VERSION
 
