--- a/Wayland/pixman/build
+++ b/Wayland/pixman/build
@@ -2,9 +2,9 @@
 
 PRETTY_NAME=pixman
 MAJOR=0
-MINOR=43
+MINOR=46
 PATCH=4
-VERSION=0.43.4
+VERSION=0.46.4
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
@@ -14,18 +14,18 @@ curl --location --remote-name --skip-existing https://x.org/releases/individual/
 xz -cd pixman-$VERSION.tar.xz | tar -x
 cd pixman-$VERSION
 
-meson setup \
-	-Dprefix=/usr \
-	-Dbuildtype=release \
-	-Ddefault_library=both \
-	-Dgtk=disabled \
-	-Dtest=disabled \
-	-Dlibpng=disabled \
-	-Ddemos=disabled \
+muon setup \
+	-D prefix=/usr \
+	-D buildtype=release \
+	-D default_library=both \
+	-D gtk=disabled \
+	-D tests=disabled \
+	-D libpng=disabled \
+	-D demos=disabled \
 	build
 
-meson -C build compile
-meson -C build install -d "$DESTDIR"
+ninja -C build
+muon -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
