--- a/System/linux-headers/build
+++ b/System/linux-headers/build
@@ -2,14 +2,14 @@
 
 PRETTY_NAME=linux
 MAJOR=6
-MINOR=13
-PATCH=3
-VERSION=6.13.3
+MINOR=14
+PATCH=1
+VERSION=6.14.1
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://mirrors.edge.kernel.org/pub/linux/kernel/v.x/linux-$VERSION.tar.xz
+curl --location --remote-name --skip-existing https://mirrors.edge.kernel.org/pub/linux/kernel/v$MAJOR.x/linux-$VERSION.tar.xz
 
 xz -cd linux-$VERSION.tar.xz | tar -x
 cd linux-$VERSION
