--- a/Base/mime-types/build
+++ b/Base/mime-types/build
@@ -4,12 +4,13 @@ PRETTY_NAME=mime-types
 MAJOR=
 MINOR=
 PATCH=
-VERSION=0
+VERSION=git
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
 curl --location --remote-name --skip-existing https://svn.apache.org/repos/asf/httpd/httpd/trunk/docs/conf/mime.types
+
 grep -v '#' mime.types > mime-processed
 install -Dm644 mime-processed "$DESTDIR/etc/mime.types"
 
