--- a/Wayland/mtdev/build
+++ b/Wayland/mtdev/build
@@ -9,7 +9,8 @@ VERSION=1.1.7
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://bitmath.org/code/mtdev/mtdev-.tar.bz2
+curl --location --remote-name --skip-existing https://bitmath.org/code/mtdev/mtdev-$VERSION.tar.bz2
+
 bzip2 -cd mtdev-$VERSION.tar.bz2 | tar -x
 cd mtdev-$VERSION
 
