--- a/Wayland/libevdev/build
+++ b/Wayland/libevdev/build
@@ -3,8 +3,8 @@
 PRETTY_NAME=libevdev
 MAJOR=1
 MINOR=13
-PATCH=1
-VERSION=1.13.1
+PATCH=5
+VERSION=1.13.5
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
@@ -14,13 +14,22 @@ curl --location --remote-name --skip-existing https://freedesktop.org/software/l
 xz -cd libevdev-$VERSION.tar.xz | tar -x
 cd libevdev-$VERSION
 
-./configure --prefix=/usr
+muon setup \
+	-D prefix=/usr \
+	-D default_library=both \
+	-D buildtype=release \
+	-D documentation=disabled \
+	-D tests=disabled \
+	-D tools=disabled \
+	build
 
-make
-make DESTDIR=$DESTDIR install-strip
+ninja -C build
+muon -C build install -d "$DESTDIR"
 
-rm -rf "$DESTDIR/usr/share/man/man3"
-find $DESTDIR -type f -name '*.la' -delete
+rm -rf $DESTDIR/usr/share
+
+find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
+find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 doas chown -R root:root $DESTDIR
 doas sh -c "tar -zcC $DESTDIR . | gzip > ../libevdev@$VERSION.tar.gz"
