--- a/Wayland/libinput/build
+++ b/Wayland/libinput/build
@@ -2,38 +2,47 @@
 
 PRETTY_NAME=libinput
 MAJOR=1
-MINOR=25
-PATCH=0
-VERSION=1.25.0
+MINOR=29
+PATCH=2
+VERSION=1.29.2
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/libinput/libinput/-/archive//libinput-$VERSION.tar.gz
+curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/libinput/libinput/-/archive/$VERSION/libinput-$VERSION.tar.gz
 
 gzip -cd libinput-$VERSION.tar.gz | tar -x
 cd libinput-$VERSION
 
-meson setup \
-	-Dprefix=/usr \
-	-Dsysconfdir=/etc \
-	-Dmandir=/usr/share/man \
-	-Dlibexecdir=/usr/lib \
-	-Ddefault_library=both \
-	-Dbuildtype=release \
-	-Ddebug-gui=false \
-	-Ddocumentation=false \
-	-Dtests=false \
-	-Dlibwacom=false \
-	-Dzshcompletiondir=no \
+# Libinput has no support for static linking, which is why the default_library
+# directive doesn't actually do anything. It's there just in case things change
+# in the future
+
+# Note: libwacom has to be toggled on and off explicitly. Wouldn't it make
+# much more sense to use automatic discovery?
+
+muon setup \
+	-D prefix=/usr \
+	-D sysconfdir=/etc \
+	-D mandir=/usr/share/man \
+	-D libexecdir=/usr/lib \
+	-D default_library=both \
+	-D buildtype=release \
+	-D debug-gui=false \
+	-D documentation=false \
+	-D tests=false \
+	-D zshcompletiondir=no \
+	-D libwacom=false \
 	build
 
-meson -C build compile
-meson -C build install -d "$DESTDIR"
+ninja -C build
+muon -C build install -d "$DESTDIR"
 
 strip --strip-unneeded "$DESTDIR/usr/bin/libinput"
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
+
+# Since we use libudev-zero, can't we just remove installed udev rules? Should we?
 
 doas chown -R root:root $DESTDIR
 doas sh -c "tar -zcC $DESTDIR . | gzip > ../libinput@$VERSION.tar.gz"
