--- a/System/hwdata/build
+++ b/System/hwdata/build
@@ -2,25 +2,23 @@
 
 PRETTY_NAME=hwdata
 MAJOR=0
-MINOR=382
+MINOR=400
 PATCH=
-VERSION=0.382
+VERSION=0.400
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/vcrhonek/hwdata/archive/refs/tags/v.tar.gz
+curl --location --remote-name --skip-existing https://github.com/vcrhonek/hwdata/archive/refs/tags/v$VERSION.tar.gz
+
 gzip -cd v$VERSION.tar.gz | tar -x
 cd hwdata-$VERSION
 
 ./configure \
 	--prefix=/usr \
-	--libdir=/usr/lib \
-	--datadir=/usr/lib \
 	--disable-blacklist
 
-make
-make install
+make DESTDIR=$DESTDIR install
 
 doas chown -R root:root $DESTDIR
 doas sh -c "tar -zcC $DESTDIR . | gzip > ../hwdata@$VERSION.tar.gz"
