--- a/Wayland/wayland/build
+++ b/Wayland/wayland/build
@@ -2,29 +2,29 @@
 
 PRETTY_NAME=wayland
 MAJOR=1
-MINOR=22
+MINOR=24
 PATCH=0
-VERSION=1.22.0
+VERSION=1.24.0
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/wayland/wayland/-/releases//downloads/wayland-$VERSION.tar.xz
+curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/wayland/wayland/-/releases/$VERSION/downloads/wayland-$VERSION.tar.xz
 
 xz -cd wayland-$VERSION.tar.xz | tar -x
 cd wayland-$VERSION
 
-meson setup \
-	-Dprefix=/usr \
-	-Dbuildtype=release \
-	-Ddefault_library=both \
-	-Dtests=false \
-	-Ddocumentation=false \
-	-Ddtd_validation=false \
+muon setup \
+	-D prefix=/usr \
+	-D buildtype=release \
+	-D default_library=both \
+	-D tests=false \
+	-D documentation=false \
+	-D dtd_validation=false \
 	build
 
-meson -C build compile
-meson -C build install -d "$DESTDIR"
+ninja -C build
+muon -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
