--- a/Python/mako/build
+++ b/Python/mako/build
@@ -3,21 +3,18 @@
 PRETTY_NAME=python:mako
 MAJOR=1
 MINOR=3
-PATCH=5
-VERSION=1.3.5
+PATCH=10
+VERSION=1.3.10
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://files.pythonhosted.org/packages/source/M/Mako/Mako-$VERSION.tar.gz
+curl --location --remote-name --skip-existing https://github.com/sqlalchemy/mako/archive/refs/tags/rel_${MAJOR}_${MINOR}_${PATCH}.tar.gz
 
-gzip -cd Mako-$VERSION.tar.gz | tar -x
-cd Mako-$VERSION
+gzip -cd rel_${MAJOR}_${MINOR}_${PATCH}.tar.gz | tar -x
+cd mako-rel_${MAJOR}_${MINOR}_${PATCH}
 
-python setup.py build
-python setup.py install \
-	--prefix=/usr \
-	--root="$DESTDIR"
+gpep517 install-from-source --optimize all --destdir $DESTDIR
 
 find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
