--- a/Python/markupsafe/build
+++ b/Python/markupsafe/build
@@ -1,22 +1,20 @@
 #!/bin/sh -e
 
 PRETTY_NAME=python:markupsafe
-MAJOR=2
-MINOR=1
-PATCH=5
-VERSION=2.1.5
+MAJOR=3
+MINOR=0
+PATCH=3
+VERSION=3.0.3
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/pallets/markupsafe/archive/refs/tags/.tar.gz
+curl --location --remote-name --skip-existing https://github.com/pallets/markupsafe/archive/refs/tags/$VERSION.tar.gz
+
 gzip -cd $VERSION.tar.gz | tar -x
 cd markupsafe-$VERSION
 
-python setup.py build
-python setup.py install \
-	--prefix=/usr \
-	--root="$DESTDIR"
+gpep517 install-from-source --optimize all --destdir $DESTDIR
 
 find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
