--- a/Wayland/libdisplay-info/build
+++ b/Wayland/libdisplay-info/build
@@ -2,26 +2,28 @@
 
 PRETTY_NAME=libdisplay-info
 MAJOR=0
-MINOR=1
-PATCH=1
-VERSION=0.1.1
+MINOR=3
+PATCH=0
+VERSION=0.3.0
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/emersion/libdisplay-info/-/archive//libdisplay-info-$VERSION.tar.gz
+curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/emersion/libdisplay-info/-/archive/$VERSION/libdisplay-info-$VERSION.tar.gz
 
 gzip -cd libdisplay-info-$VERSION.tar.gz | tar -x
 cd libdisplay-info-$VERSION
 
-meson setup \
-	-Dprefix=/usr \
-	-Dbuildtype=release \
-	-Ddefault_library=both \
+rm -rf subprojects
+
+muon setup \
+	-D prefix=/usr \
+	-D buildtype=release \
+	-D default_library=both \
 	build
 
-meson -C build compile
-meson -C build install -d "$DESTDIR"
+ninja -C build
+muon -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
