--- a/Net/dhcpcd/build
+++ b/Net/dhcpcd/build
@@ -14,7 +14,7 @@ curl --location --remote-name --skip-existing https://github.com/NetworkConfigur
 gzip -cd v$VERSION.tar.gz | tar -x
 cd dhcpcd-$VERSION
 
-# To do: enable priviledge separation
+# TODO: enable priviledge separation
 ./configure \
 	--dbdir=/var/lib/dhcpcd \
 	--prefix=/usr \
