--- a/Python/setuptools/build
+++ b/Python/setuptools/build
@@ -14,6 +14,7 @@ curl --location --remote-name --skip-existing https://github.com/pypa/setuptools
 gzip -cd v$VERSION.tar.gz | tar -x
 cd setuptools-$VERSION
 
+# TODO: unvendor (sic.) dependencies
 python setup.py install --prefix=/usr --root=$DESTDIR
 
 doas chown -R root:root $DESTDIR
