--- a/Wayland/libinput/build
+++ b/Wayland/libinput/build
@@ -18,7 +18,7 @@ cd libinput-$VERSION
 # directive doesn't actually do anything. It's there just in case things change
 # in the future
 
-# Note: libwacom has to be toggled on and off explicitly. Wouldn't it make
+# TODO: libwacom has to be toggled on and off explicitly. Wouldn't it make
 # much more sense to use automatic discovery?
 
 muon setup \
@@ -42,7 +42,7 @@ strip --strip-unneeded "$DESTDIR/usr/bin/libinput"
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
-# Since we use libudev-zero, can't we just remove installed udev rules? Should we?
+# TODO: Since we use libudev-zero, can't we just remove installed udev rules? Should we?
 
 doas chown -R root:root $DESTDIR
 doas sh -c "tar -zcC $DESTDIR . | gzip > ../libinput@$VERSION.tar.gz"
