--- a/Wayland/libglvnd/build
+++ b/Wayland/libglvnd/build
@@ -9,14 +9,22 @@ VERSION=1.7.0
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/glvnd/libglvnd/-/archive/v/libglvnd-v.tar.gz
+curl --location --remote-name --skip-existing https://gitlab.freedesktop.org/glvnd/libglvnd/-/archive/v$VERSION/libglvnd-v$VERSION.tar.gz
+
 gzip -cd libglvnd-v$VERSION.tar.gz | tar -x
 cd libglvnd-v$VERSION
 
-meson setup -Dprefix=/usr -Dbuildtype=release build
+patch -p1 < ../bypass-failing-check-for-muon.patch
 
-meson -C build compile
-meson -C build install -d "$DESTDIR"
+# Again, default_library=both doesn't actually do anything
+muon setup \
+	-D prefix=/usr \
+	-D buildtype=release \
+	-D default_library=both \
+	build
+
+ninja -C build
+muon -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
