--- a/Base/mime-types/build
+++ b/Base/mime-types/build
@@ -9,10 +9,9 @@ VERSION=git
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://svn.apache.org/repos/asf/httpd/httpd/trunk/docs/conf/mime.types
+curl https://svn.apache.org/repos/asf/httpd/httpd/trunk/docs/conf/mime.types | grep -v '#' - > mime.types
 
-grep -v '#' mime.types > mime-processed
-install -Dm644 mime-processed "$DESTDIR/etc/mime.types"
+install -Dm644 mime.types "$DESTDIR/etc/mime.types"
 
 doas chown -R root:root $DESTDIR
-doas sh -c "tar -zcC $DESTDIR . | gzip > ../mime-types@$VERSION.tar.gz"
+doas sh -c "tar -zcC $DESTDIR . | gzip > mime-types@$VERSION.tar.gz"
