--- a/Devel/m4/build
+++ b/Devel/m4/build
@@ -3,8 +3,8 @@
 PRETTY_NAME=m4
 MAJOR=1
 MINOR=4
-PATCH=19
-VERSION=1.4.19
+PATCH=20
+VERSION=1.4.20
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
@@ -14,11 +14,7 @@ curl --location --remote-name --skip-existing https://ftp.gnu.org/gnu/m4/m4-$VER
 xz -cd m4-$VERSION.tar.xz | tar -x
 cd m4-$VERSION
 
-./configure \
-	--prefix=/usr \
-	--disable-nls \
-	--enable-threads=posix \
-	--without-packager
+./configure --prefix=/usr --disable-nls
 
 make
 make DESTDIR=$DESTDIR install-strip
