--- a/System/sqlite/build
+++ b/System/sqlite/build
@@ -2,9 +2,9 @@
 
 PRETTY_NAME=sqlite
 MAJOR=3
-MINOR=50
-PATCH=4
-VERSION=3.50.4
+MINOR=51
+PATCH=0
+VERSION=3.51.0
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
@@ -14,19 +14,20 @@ curl --location --remote-name --skip-existing https://sqlite.org/2025/sqlite-aut
 gzip -cd sqlite-autoconf-${MAJOR}${MINOR}0${PATCH}00.tar.gz | tar -x
 cd sqlite-autoconf-${MAJOR}${MINOR}0${PATCH}00
 
-export CPPFLAGS="$CPPFLAGS -DSQLITE_ENABLE_FTS3"
-export CPPFLAGS="$CPPFLAGS -DSQLITE_ENABLE_FTS3_PARENTHESIS"
-export CPPFLAGS="$CPPFLAGS -DSQLITE_ENABLE_FTS4"
-export CPPFLAGS="$CPPFLAGS -DSQLITE_ENABLE_COLUMN_METADATA"
+export CPPFLAGS="$CPPFLAGS -DSQLITE_ENABLE_FTS3_PARENTHESIS -DSQLITE_ENABLE_COLUMN_METADATA"
 
 ./configure \
 	--prefix=/usr \
-	--enable-dynamic-extensions \
+	--enable-math \
+	--enable-load-extension \
 	--enable-editline \
+	--enable-fts3 \
+	--enable-fts4 \
 	--enable-fts5 \
-	--enable-threadsafe \
-	--disable-debug \
-	--disable-readline
+	--enable-shared \
+	--enable-static \
+	--editline \
+	--disable-debug
 
 make
 make DESTDIR=$DESTDIR install
