--- a/Base/oksh/build
+++ b/Base/oksh/build
@@ -2,14 +2,14 @@
 
 PRETTY_NAME=oksh
 MAJOR=7
-MINOR=7
+MINOR=8
 PATCH=
-VERSION=7.7
+VERSION=7.8
 
 mkdir temporary-builddir
 DESTDIR="$PWD/temporary-builddir"
 
-curl --location --remote-name --skip-existing https://github.com/ibara/oksh/releases/download/oksh-/oksh-$VERSION.tar.gz
+curl --location --remote-name --skip-existing https://github.com/ibara/oksh/releases/download/oksh-$VERSION/oksh-$VERSION.tar.gz
 
 gzip -cd oksh-$VERSION.tar.gz | tar -x
 cd oksh-$VERSION
