--- a/Media/leptonica/build
+++ b/Media/leptonica/build
@@ -26,7 +26,7 @@ cd leptonica-$VERSION
 	--with-libwebpmux \
 	--with-zlib \
 	--with-libtiff \
-	--without-libopenjpeg
+	--with-libopenjpeg
 
 make
 make DESTDIR=$DESTDIR install-strip
