Move linux from System to Base

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # These are found in the PinebookPro repository
 Wayland/libdrm
 Wayland/mesa
-System/linux
+Base/linux
 System/linux-firmware
 Media/ffmpeg
 Devel/libclc
